syntax = "proto3";

package main;

service ObiMaster {
    rpc SubmitJob (JobSubmissionRequest) returns (EmptyResponse) {}
}

message Infrastructure {

}

// Request/Response messages

message EmptyRequest {

}

message EmptyResponse {

}

message ListInfrastructuresResponse {
    repeated Infrastructure infrastructure = 1;
}

message JobSubmissionRequest {
    string executablePath = 1;
    string infrastructure = 2;
    enum JobType {
        PYSPARK = 0;
    }
    JobType type = 3;
    string jobArgs = 4;
    int32 duration = 5;
    float failureProbability = 6;
    int32 priority = 7;
}
